Nicer slim sidebar transitioning, dark mode fixes, fix tests by making settings taller

--- a/src-ui/src/app/components/document-list/document-list.component.scss
+++ b/src-ui/src/app/components/document-list/document-list.component.scss
@@ -22,7 +22,7 @@ $paperless-card-breakpoints: (
 );
 
 .row-cols-paperless-cards {
-  // xs, we dont want in .col.slim block
+  // xs, we dont want in .col-slim block
   > * {
     flex: 0 0 auto;
     width: calc(100% / 2);
@@ -38,12 +38,12 @@ $paperless-card-breakpoints: (
   }
 }
 
-::ng-deep .col.slim .row-cols-paperless-cards {
+::ng-deep .col-slim .row-cols-paperless-cards {
   @each $width, $n_cols in $paperless-card-breakpoints {
     @media(min-width: $width) {
       > * {
         flex: 0 0 auto;
-        width: calc(100% / ($n-cols + 1));
+        width: calc(100% / ($n-cols + 1)) !important;
       }
     }
   }
